--- a/src/styles/general.module.scss
+++ b/src/styles/general.module.scss
@@ -69,14 +69,36 @@ $secondary_font: "Oxygen";
   width: 60%;
 }
 
-.dropdown {
-  border: 0;
-  border-radius: 2px;
-  box-shadow: 0;
-  appearance: none;
-  height: 2rem;
-  background-color: $primary_color;
-  color: $primary_text_color;
+.select {
+  -webkit-appearance: none;
+  border: none;
+  background-color: transparent;
+  padding: 0.5rem;
+  width: 100%;
+  text-align: center;
+
+  color: var(--text_color);
+
+  option:nth-child(even) {
+    background-color: var(--background_color);
+  }
+  option:nth-child(odd) {
+    background-color: var(--contrast_bg_color);
+  }
+}
+
+.select_input_field {
+  margin: 0;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+
+  border-radius: 0.3rem;
+  box-shadow: 0 0 0 2px var(--text_color);
+
+  background-color: var(--background_color);
 }
 
 .text_marker {
